# dl_anz

./: .gitignore  Cargo.toml  README.md  app_config.toml
sql/: xl_tables.sql
src/: err.rs  lib.rs  main.rs
src/data_models/: data_vecs.rs  mod.rs  xl_data_models.rs  xl_models.rs
src/download/: data_access.rs  dl_helper.rs  gen_helper.rs  mod.rs
src/setup/: cli_reader.rs  config_reader.rs  log_helper.rs  mod.rs
