[package]
name = "dl_anz"
version = "0.1.0"
authors = ["Steve Canham <stevecanham@outlook.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "dl_anz"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "macros", "chrono" ] }
tokio = { version = "1.50.0", features = ["macros", "rt"]}
clap = { version = "4.6.0", features = ["cargo"] }
chrono = { version = "0.4.44", features = ["clock"] }
log = "0.4.29"
log4rs = "1.4.0"
toml = "0.9.8"
csv = "1.4.0"
regex = "1.12.3"

